--- a/packages/core/src/components/time-picker/time-picker.scss
+++ b/packages/core/src/components/time-picker/time-picker.scss
@@ -21,7 +21,7 @@
 
   @media (max-width: 576px) {
     .clock {
-      padding: 1.5rem 0;
+      padding: 1.5rem 0 1rem 0;
     }
 
     .header {
